--- a/ImageFilter Gallery/en.lproj/IGDocument.xib
+++ b/ImageFilter Gallery/en.lproj/IGDocument.xib
@@ -525,7 +525,7 @@
 											<int key="NSTag">402</int>
 											<reference key="NSTarget" ref="659096607"/>
 										</object>
-										<object class="NSMenuItem" id="907130789">
+										<object class="NSMenuItem" id="132468895">
 											<reference key="NSMenu" ref="661761077"/>
 											<string key="NSTitle">彩度の統一</string>
 											<string key="NSKeyEquiv"/>
@@ -536,7 +536,7 @@
 											<int key="NSTag">700</int>
 											<reference key="NSTarget" ref="659096607"/>
 										</object>
-										<object class="NSMenuItem" id="417553379">
+										<object class="NSMenuItem" id="1001071683">
 											<reference key="NSMenu" ref="661761077"/>
 											<string key="NSTitle">明度の統一</string>
 											<string key="NSKeyEquiv"/>
@@ -547,15 +547,26 @@
 											<int key="NSTag">701</int>
 											<reference key="NSTarget" ref="659096607"/>
 										</object>
-										<object class="NSMenuItem" id="1053626368">
+										<object class="NSMenuItem" id="645765960">
 											<reference key="NSMenu" ref="661761077"/>
-											<string key="NSTitle">白を透明に</string>
+											<string key="NSTitle">白を透明に（黒）</string>
 											<string key="NSKeyEquiv"/>
 											<int key="NSMnemonicLoc">2147483647</int>
 											<reference key="NSOnImage" ref="343414530"/>
 											<reference key="NSMixedImage" ref="805109130"/>
 											<string key="NSAction">_popUpItemAction:</string>
 											<int key="NSTag">702</int>
+											<reference key="NSTarget" ref="659096607"/>
+										</object>
+										<object class="NSMenuItem" id="399279207">
+											<reference key="NSMenu" ref="661761077"/>
+											<string key="NSTitle">白を透明に（RGB保存）</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<reference key="NSOnImage" ref="343414530"/>
+											<reference key="NSMixedImage" ref="805109130"/>
+											<string key="NSAction">_popUpItemAction:</string>
+											<int key="NSTag">703</int>
 											<reference key="NSTarget" ref="659096607"/>
 										</object>
 										<object class="NSMenuItem" id="1035212892">
@@ -1686,7 +1697,7 @@
 						<int key="objectID">6</int>
 						<reference key="object" ref="568628114"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="962230780">
+							<object class="IBNSLayoutConstraint" id="874582765">
 								<reference key="firstItem" ref="183157779"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
@@ -1702,7 +1713,7 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="516057810">
+							<object class="IBNSLayoutConstraint" id="774854827">
 								<reference key="firstItem" ref="183157779"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
@@ -2549,9 +2560,10 @@
 							<reference ref="990305087"/>
 							<reference ref="932728592"/>
 							<reference ref="62027674"/>
-							<reference ref="907130789"/>
-							<reference ref="417553379"/>
-							<reference ref="1053626368"/>
+							<reference ref="132468895"/>
+							<reference ref="1001071683"/>
+							<reference ref="645765960"/>
+							<reference ref="399279207"/>
 						</array>
 						<reference key="parent" ref="659096607"/>
 					</object>
@@ -3404,27 +3416,32 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100478</int>
-						<reference key="object" ref="516057810"/>
+						<reference key="object" ref="774854827"/>
 						<reference key="parent" ref="568628114"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100479</int>
-						<reference key="object" ref="962230780"/>
+						<reference key="object" ref="874582765"/>
 						<reference key="parent" ref="568628114"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100485</int>
-						<reference key="object" ref="907130789"/>
+						<reference key="object" ref="132468895"/>
 						<reference key="parent" ref="661761077"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100486</int>
-						<reference key="object" ref="417553379"/>
+						<reference key="object" ref="1001071683"/>
 						<reference key="parent" ref="661761077"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100487</int>
-						<reference key="object" ref="1053626368"/>
+						<reference key="object" ref="645765960"/>
+						<reference key="parent" ref="661761077"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100488</int>
+						<reference key="object" ref="399279207"/>
 						<reference key="parent" ref="661761077"/>
 					</object>
 				</array>
@@ -3682,13 +3699,14 @@
 				<string key="100485.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100486.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100487.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100488.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="5.IBWindowTemplateEditedContentRect">{{133, 170}, {507, 413}}</string>
 				<array key="6.IBNSViewMetadataConstraints">
 					<reference ref="601713668"/>
 					<reference ref="179222887"/>
-					<reference ref="516057810"/>
-					<reference ref="962230780"/>
+					<reference ref="774854827"/>
+					<reference ref="874582765"/>
 				</array>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
@@ -3696,7 +3714,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100487</int>
+			<int key="maxID">100488</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3705,7 +3723,6 @@
 					<string key="superclassName">NSDocument</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="addFilter:">id</string>
-						<string key="applyFilters:">id</string>
 						<string key="changedFilterParamValue2:">id</string>
 						<string key="changedFilterParamValue3:">id</string>
 						<string key="changedFilterParamValue:">id</string>
@@ -3714,7 +3731,6 @@
 						<string key="changedFilterParamValueByText:">id</string>
 						<string key="chnagedFilterParamValue4:">id</string>
 						<string key="chnagedFilterParamValueByText4:">id</string>
-						<string key="copy:">id</string>
 						<string key="saveAs:">id</string>
 						<string key="setBackgroundBlack:">id</string>
 						<string key="setBackgroundCheckerboard:">id</string>
@@ -3726,10 +3742,6 @@
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="addFilter:">
 							<string key="name">addFilter:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="applyFilters:">
-							<string key="name">applyFilters:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="changedFilterParamValue2:">
@@ -3762,10 +3774,6 @@
 						</object>
 						<object class="IBActionInfo" key="chnagedFilterParamValueByText4:">
 							<string key="name">chnagedFilterParamValueByText4:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="copy:">
-							<string key="name">copy:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="saveAs:">
@@ -3914,60 +3922,17 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">NSDocument</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="browseDocumentVersions:">id</string>
-						<string key="duplicateDocument:">id</string>
-						<string key="lockDocument:">id</string>
-						<string key="moveDocumentToUbiquityContainer:">id</string>
-						<string key="printDocument:">id</string>
-						<string key="runPageLayout:">id</string>
-						<string key="saveDocument:">id</string>
-						<string key="saveDocumentAs:">id</string>
-						<string key="saveDocumentTo:">id</string>
-						<string key="unlockDocument:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="browseDocumentVersions:">
-							<string key="name">browseDocumentVersions:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="duplicateDocument:">
-							<string key="name">duplicateDocument:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="lockDocument:">
-							<string key="name">lockDocument:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="moveDocumentToUbiquityContainer:">
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">moveDocumentToUbiquityContainer:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">moveDocumentToUbiquityContainer:</string>
+						<object class="IBActionInfo" key="NS.object.0">
 							<string key="name">moveDocumentToUbiquityContainer:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-						<object class="IBActionInfo" key="printDocument:">
-							<string key="name">printDocument:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="runPageLayout:">
-							<string key="name">runPageLayout:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="saveDocument:">
-							<string key="name">saveDocument:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="saveDocumentAs:">
-							<string key="name">saveDocumentAs:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="saveDocumentTo:">
-							<string key="name">saveDocumentTo:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="unlockDocument:">
-							<string key="name">unlockDocument:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/NSDocument.h</string>
